--- 1.8 2016-xx-xx ---
*** bosixnet-webui ***
* Update hosts map only when host address is really changed.
* Add special page "/timestamps": it shows list of hosts and timestamps
  of their last activity.

--- 1.7 2015-09-30 ---
*** common ***
* Relicense from GPLv2 or later to Expat.
*** bosixnet-daemon ***
* Use `ip` tool instead of `ifconfig` for getting local IPv6 address.
* Added ability to select specific network device for getting local IPv6
  address. By default script searches IPv6 addresses for all network devices
  of the system and chooses the last of them.
* Protect file with list of hosts from simultaneous editing.
* Additional check if current IPv6 address is valid.

--- 1.6 2014-02-11 ---
*** bosixnet-daemon ***
* Improved simple check for validity of IPv6 addresses received from server:
  - strings should be longer than 6 characters
  - strings should have at least three ":" characters
  - fifth character from strings should be equal to ":"
  (Affects only script update_hosts.)
* Added support of multiple servers:
  - IPv6 address is sent to all available servers
  - data about hosts is got from the first server which replies to request
  See file bosixnet-daemon.conf for examples of configuring.
*** bosixnet-webui ***
* Removed support of POST requests.
* Added simple check for valid IPv6 address received in GET request:
  - string should be longer than 7 characters
  - string should be shorter than 40 characters
  - string should have at least three ":" characters
  - fifth character from string should be equal to ":"
  - string should contain only allowed characters (:0123456789abcdefABCDEF)
  The same check is used during loading the list of hosts from file.

--- 1.5 2014-02-05 ---
* Changed default user in webui_launcher from "user" to "bosixnet".
* Added man pages, updated README and fixed few typos in help.
* Renamed BASIC_URL variable to BASIC_STR.

--- 1.4 2014-02-04 ---